--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/museum
 spring.datasource.username=postgres
 spring.datasource.password=super
 
