feat: adding cleaning report in previous month for all

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,21 @@
 			<version>6.4.4.Final</version>
 		</dependency>
 
+
+		<!--generating PDF-->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<!--Necu dodati dependecy za enkripciju-->
+
 	</dependencies>
 
 	<build>
