--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,18 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Elastic -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>parsson</artifactId>
+			<version>1.1.4</version> <!-- Primer novije verzije -->
+		</dependency>
+
 
 		<!-- Lombok -->
 		<dependency>
@@ -128,7 +134,7 @@
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
-			<version>5.5.13.3</version>
+			<version>5.5.13.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
