--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 server.port=8081
 
+
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/museum-backend
 spring.datasource.username=postgres
 spring.datasource.password=super
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.username=
+spring.elasticsearch.password=
+
 
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
